--- a/src/styles/blocks/_about.scss
+++ b/src/styles/blocks/_about.scss
@@ -13,8 +13,7 @@
     line-height: 72px;
     /*display: flex;*/
     text-transform: uppercase;       /*все символы верхний регистр*/ 
-    // color: #000000;                /* цвет текста черный*/
-    color: #0f0;
+     color: #000000;                /* цвет текста черный*/
 }
 
 .about_info {
