подготовил scss проект для работы в аудитории

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -4,7 +4,7 @@
 @import "common/_typography";
 //my connect
 @import "common/_all.scss";
-
+@import "common/_layout.scss";
 
 
 // blocks
@@ -17,5 +17,5 @@
 @import "blocks/_products.scss";
 @import "blocks/_services.scss";
 @import "blocks/_subscribe.scss";
-@import "blocks/asdf";
+@import "blocks/_main_nav.scss";
 
