--- a/src/styles/blocks/_contacts.scss
+++ b/src/styles/blocks/_contacts.scss
@@ -11,11 +11,6 @@
     color: #000000;
 }
 
-.contact_from {
-    display:flex;
-    display:block;
-}
-
 .contact_name {
     width:339px;
     height:70px;
@@ -38,4 +33,59 @@
     border-radius: 5px;
     color:rgba(229,229,229,1);
     background: #e5e5e5;
+}
+
+
+// --------------------
+
+.contacts-wrap {
+    display: flex;
+    justify-content: space-between;
+}
+
+.contact_form {
+    display:flex;
+    display:block;
+}
+
+.contacts-form-field {
+    width: 50%;
+    margin-bottom: 45px;
+    // border: 1px solid #000;
+}
+
+&:nth-child(1) {
+    padding-right: 16px;
+}
+
+&:nth-child(2) {
+    padding-left: 16px;
+}
+
+.input,
+textarea {
+    width: 100%;
+    margin-top: 5px;
+    padding: 21px 36px;
+    font-size: 16px;
+    line-height: 28px;
+    background-color: $color-form-bg;
+    border: none;
+    border-radius: 5px;
+}
+
+.textarea {
+    // width: 100%;
+    // background-color: $color-form-bg;
+    // border: none;
+    // border-radius: 5px;
+    resize: vertical;
+}
+
+.contacts-form-field--full {
+    width: 100%;
+}
+
+.contacts-info {
+
 }
